--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,17 @@
 {
   "dependencies": {
     "com.unity.collab-proxy": "1.14.18",
+    "com.unity.formats.fbx": "4.2.1",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.polybrush": "1.0.2",
+    "com.unity.probuilder": "4.5.2",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "2.1.6",
     "com.unity.timeline": "1.2.18",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.interaction.toolkit": "2.1.1",
+    "com.unity.xr.legacyinputhelpers": "2.1.10",
     "com.unity.xr.management": "4.2.1",
     "com.unity.xr.oculus": "1.12.1",
     "com.unity.modules.ai": "1.0.0",
